--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link
@@ -11,10 +11,10 @@
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       crossorigin="anonymous"
     />
+    <!-- 
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>DevConnector</title>
+    <title>DevSociety</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
